sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:3: error: '=' expected but ';' found.
	var ech;
               ^